<resources>
    <string name="app_name">Freezer</string>
    <string name="login">Вход</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="click_to_login">Войти</string>
    <string name="click_to_register">Зарегистрироваться</string>
    <string name="logout">Выйти</string>
    <string name="title_freezer">Холодильник</string>
    <string name="title_recipes">Рецепты</string>
    <string name="title_profile">Профиль</string>
    <string name="hello">Привет, </string>
    <string name="name">Имя</string>
    <string name="food_name">Название продукта</string>
    <string name="caption">Заголовок</string>
    <string name="add">Добавить</string>
    <string name="exclamation">!</string>
    <string name="already_exists">уже добавлен</string>
    <string name="added_to_fridge">добавлен в холодильник</string>
    <string name="product_deleted">удален</string>
    <string name="enter_email">Введите E-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login_successful">Успешный вход</string>
    <string name="authentication_failed">Ошибка авторизации</string>
    <string name="enter_name">Введите имя</string>
    <string name="account_created">Профиль создан</string>
    <string name="enter_product">Введите название продукта</string>
    <string name="recipe_name">Название рецепта</string>
    <string name="recipe_products">Необходимые продукты:</string>
    <string name="product_list">*Продукты\n*Продукты</string>
    <string name="instruction">Инструкция:</string>
    <string name="description">Описание</string>
    <string name="clear">Отчистить</string>
    <string name="no_recipes">Подходящих рецептов нет :(</string>
    <string name="calories_count">Ккал на 100г:</string>
    <string name="video_profile">Видео</string>
    <string name="menu_item">Пункт меню</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="list_item_second">Второй элемент</string>
    <string name="list_item_first">Первый элемент</string>
    <string name="list_name">Название списка</string>
    <string name="favorites">Избранное</string>
    <string name="rating">Оценки</string>
    <string name="added_to_favorites">добавлен в избранное</string>
    <string name="deleted_from_favorites">удален из избранного</string>
    <string name="deleted_from_rating">удален из оценок</string>
    <string name="admin_profile">Админ</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="colon">:</string>
    <string name="rating_count">Кол-во оценок</string>
</resources>