<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipes.RecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView" />

        <TextView
            android:id="@+id/articleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_products"
            android:textStyle="italic"
            android:textSize="25sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionTextView"/>

        <TextView
            android:id="@+id/productsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_list"
            android:textSize="22sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleTextView" />

        <TextView
            android:id="@+id/instructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsTextView" />

        <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/description"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>